# pydantic_ai

./: .gitignore  README.md  face-detection.ipynb  main.py  pyproject.toml
backend/: README.md  prompts.yaml  pyproject.toml
backend/src/: main.py
backend/src/config/: __init__.py  app_config.py
backend/src/controllers/: document_controller.py  workflow_controller.py
backend/src/core/: processor.py  prompt_loader.py  service_manager.py  storage.py  textract_core.py
backend/src/dependencies/: __init__.py  document_dependencies.py  workflow_dependencies.py
backend/src/middlewares/: __init__.py  auth_middlewares.py  cors_middlewares.py
backend/src/models/: document_model.py  workflow_model.py
backend/src/routes/: document_routes.py  workflow_routes.py
backend/src/schemas/: document_schemas.py  workflow_schemas.py
backend/src/services/: document_service.py  workflow_service.py
backend/src/utils/: __init__.py  logging_utils.py
backend/templates/: base.html  results.html  workflow.html
src/snap_ai/: app.py  config.py  dependencies.py  main.py  processor.py  utils.py
src/snap_ai/core/: processor.py  utils.py
src/snap_ai/models/: document.py
src/snap_ai/routes/: __init__.py  api.py  web.py  workflow.py
src/snap_ai/services/: document_service.py  file_service.py
static/: style.css
templates/: results.html  upload.html
